--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+aiohttp==3.7.3
 amqp==5.0.2
 asgiref==3.3.1
+async-timeout==3.0.1
+attrs==20.3.0
 billiard==3.6.3.0
 cached-property==1.5.2
 celery==5.0.5
 certifi==2020.12.5
-chardet==4.0.0
+chardet==3.0.4
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
+dhooks==1.1.4
 Django==3.1.5
 django-jsonfield==1.4.1
 django-model-utils==4.1.1
@@ -19,6 +23,7 @@ djangorestframework-jwt==1.11.0
 feedparser==6.0.2
 idna==2.10
 kombu==5.0.2
+multidict==5.1.0
 prompt-toolkit==3.0.10
 PyJWT==1.7.1
 pytz==2020.5
@@ -30,7 +35,9 @@ six==1.15.0
 soupsieve==2.1
 sqlparse==0.4.1
 standardjson==0.3.1
+typing-extensions==3.7.4.3
 urllib3==1.26.2
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.12.1
+yarl==1.6.3
